--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.1",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.2",
     "next": "13.4.4",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "react-loader-spinner": "^5.3.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
